create pdtb-to-csv.py file

--- a/charspanCheck.ipynb
+++ b/charspanCheck.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -34,51 +34,12 @@
     }
    ],
    "source": [
-    "pdtb2 = pd.read_csv(\"../pdtb2/pdtb2.csv\")"
+    "pdtb2 = pd.read_csv(\"pdtb2_v2_modified.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Relation', 'Section', 'FileNumber', 'Connective_SpanList',\n",
-       "       'Connective_GornList', 'Connective_Trees', 'Connective_RawText',\n",
-       "       'Connective_StringPosition', 'SentenceNumber', 'ConnHead', 'Conn1',\n",
-       "       'Conn2', 'ConnHeadSemClass1', 'ConnHeadSemClass2', 'Conn2SemClass1',\n",
-       "       'Conn2SemClass2', 'Attribution_Source', 'Attribution_Type',\n",
-       "       'Attribution_Polarity', 'Attribution_Determinacy',\n",
-       "       'Attribution_SpanList', 'Attribution_GornList', 'Attribution_Trees',\n",
-       "       'Attribution_RawText', 'Arg1_SpanList', 'Arg1_GornList', 'Arg1_Trees',\n",
-       "       'Arg1_RawText', 'Arg1_Attribution_Source', 'Arg1_Attribution_Type',\n",
-       "       'Arg1_Attribution_Polarity', 'Arg1_Attribution_Determinacy',\n",
-       "       'Arg1_Attribution_SpanList', 'Arg1_Attribution_GornList',\n",
-       "       'Arg1_Attribution_Trees', 'Arg1_Attribution_RawText', 'Arg2_SpanList',\n",
-       "       'Arg2_GornList', 'Arg2_Trees', 'Arg2_RawText',\n",
-       "       'Arg2_Attribution_Source', 'Arg2_Attribution_Type',\n",
-       "       'Arg2_Attribution_Polarity', 'Arg2_Attribution_Determinacy',\n",
-       "       'Arg2_Attribution_SpanList', 'Arg2_Attribution_GornList',\n",
-       "       'Arg2_Attribution_Trees', 'Arg2_Attribution_RawText', 'Sup1_SpanList',\n",
-       "       'Sup1_GornList', 'Sup1_Trees', 'Sup1_RawText', 'Sup2_SpanList',\n",
-       "       'Sup2_GornList', 'Sup2_Trees', 'Sup2_RawText', 'FullRawText'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pdtb2.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -122,19 +83,19 @@
       "True 13\n",
       "True 14\n",
       "True 15\n",
-      "True 16\n",
+      "False 16\n",
       "True 17\n",
       "True 18\n",
       "True 19\n",
       "True 20\n",
-      "True 21\n",
+      "False 21\n",
       "True 22\n",
       "True 23\n",
-      "True 24\n",
+      "False 24\n",
       "True 25\n",
       "True 26\n",
       "False 27\n",
-      "False 28\n",
+      "True 28\n",
       "True 29\n",
       "True 30\n",
       "True 31\n",
@@ -145,7 +106,7 @@
       "False 36\n",
       "True 37\n",
       "True 38\n",
-      "False 39\n",
+      "True 39\n",
       "True 40\n",
       "True 41\n",
       "True 42\n",
@@ -159,10 +120,10 @@
       "True 50\n",
       "True 51\n",
       "True 52\n",
-      "True 53\n",
+      "False 53\n",
       "True 54\n",
       "True 55\n",
-      "True 56\n",
+      "False 56\n",
       "True 57\n",
       "True 58\n",
       "True 59\n",
@@ -170,15 +131,15 @@
       "True 61\n",
       "True 62\n",
       "True 63\n",
-      "False 64\n",
+      "True 64\n",
       "True 65\n",
       "True 66\n",
       "True 67\n",
-      "False 68\n",
+      "True 68\n",
       "True 69\n",
       "True 70\n",
       "True 71\n",
-      "False 72\n",
+      "True 72\n",
       "True 73\n",
       "True 74\n",
       "True 75\n",
@@ -187,10 +148,10 @@
       "True 78\n",
       "True 79\n",
       "True 80\n",
-      "False 81\n",
+      "True 81\n",
       "True 82\n",
       "True 83\n",
-      "True 84\n",
+      "False 84\n",
       "True 85\n",
       "True 86\n",
       "True 87\n",
@@ -198,9 +159,9 @@
       "True 89\n",
       "True 90\n",
       "True 91\n",
-      "False 92\n",
+      "True 92\n",
       "True 93\n",
-      "True 94\n",
+      "False 94\n",
       "True 95\n",
       "True 96\n",
       "True 97\n",
@@ -217,7 +178,7 @@
     "    section = pdtb2.loc[i, 'Section']\n",
     "    filenumber = pdtb2.loc[i, 'FileNumber']\n",
     "    section = '{0:02}'.format(section)\n",
-    "    filename = 'wsj_{0:04}'.format(filenumber)\n",
+    "    filename = 'wsj_{0:02}'.format(int(section)) + '{:02}'.format(filenumber)\n",
     "    with open(DATA_PATH/section/filename) as f:\n",
     "        doc_rawtext = f.read()\n",
     "    first = arg1_char_span_list[0][0]\n",
@@ -240,23 +201,7 @@
      ]
     }
    ],
-   "source": [
-    "i=36\n",
-    "arg1_char_span_string = pdtb2.loc[i, 'Arg1_SpanList']\n",
-    "arg1_char_span_list = _get_span_list(arg1_char_span_string)\n",
-    "arg1_rawtext = pdtb2.loc[i, 'Arg1_RawText']\n",
-    "section = pdtb2.loc[i, 'Section']\n",
-    "filenumber = pdtb2.loc[i, 'FileNumber']\n",
-    "section = '{0:02}'.format(section)\n",
-    "filename = 'wsj_{0:04}'.format(filenumber)\n",
-    "with open(DATA_PATH/section/filename) as f:\n",
-    "    doc_rawtext = f.read()\n",
-    "first = arg1_char_span_list[0][0]\n",
-    "second = arg1_char_span_list[0][1]\n",
-    "\n",
-    "print(doc_rawtext[int(first):int(second)])\n",
-    "print(arg1_rawtext)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -271,6 +216,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
