pdtb-parses finally worked but giving recall very low
the reason might be char span is wrong for each char

--- a/old/prepare-parse-n-data.ipynb
+++ b/old/prepare-parse-n-data.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
     }
    ],
    "source": [
-    "pdtb2 = pd.read_csv(\"../pdtb2/pdtb2.csv\")"
+    "pdtb2 = pd.read_csv(\"../../pdtb2/pdtb2.csv\")"
    ]
   },
   {
@@ -265,6 +265,20 @@
     "            if rel[\"ID\"] == int(arg_id):\n",
     "                rel[linker.split('_')[0]][\"TokenList\"].append(token_list)\n",
     "\n",
+    "def list_strip_punctuation(list):\n",
+    "    \"\"\"Args:list[str]\"\"\"\n",
+    "    punctuation = \"\"\"!\"#&'*+,-..../:;<=>?@[\\]^_`|~\"\"\" + \"``\" + \"''\"\n",
+    "    i = 0\n",
+    "    while i < len(list) and list[i][0] in punctuation + \"-LCB--LRB-\":\n",
+    "        i += 1\n",
+    "    if i == len(list):\n",
+    "        return []\n",
+    "    j = len(list) - 1\n",
+    "    while j >= 0 and list[j][0] in punctuation + \"-RRB--RCB-\":\n",
+    "        j -= 1\n",
+    "    return list[i: j+1]\n",
+    "\n",
+    "\n",
     "def data_generator_per_doc_token_level(section, filenumber, relation_id, batch_idx, rawtext):\n",
     "    \"\"\"generate json format data for one document\n",
     "    Args:\n",
@@ -297,6 +311,9 @@
     "            dependencies = dependency_parse(sent)\n",
     "            parsetree = constituent_parsing(sentence)\n",
     "            \n",
+    "            if section == 10 and filenumber == 1 and sentence_idx == 3:\n",
+    "                print(parsetree)\n",
+    "                print(sent)\n",
     "            for tok_idx_in_sentence, tok in enumerate(sentence):\n",
     "                ## 5 attribute of each word\n",
     "                char_offset_begin = tok.idx\n",
@@ -314,6 +331,8 @@
     "                              sentence_offset, token_offset_in_sent]\n",
     "                add_token_list(doc_data, linker, token_list)\n",
     "            \n",
+    "            if list_strip_punctuation(words) == []:\n",
+    "                continue\n",
     "            sentences.append({\"dependencies\": dependencies, \"parsetree\": parsetree, \"words\": words})\n",
     "    return {'sentences': sentences} , doc_data\n",
     "\n",
@@ -369,7 +388,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -380,6 +401,8 @@
       "section:  00  filename:  wsj_0001\n",
       "section:  00  filename:  wsj_0002\n",
       "section:  10  filename:  wsj_1001\n",
+      "(S (NP (DT 8%.The) (NNS notes)) (VP (VP (VBP are) (NP (JJ zero) (: -) (NN coupon) (NNS securities))) (CC and) (VP (MD will) (RB not) (VP (VB pay) (NP (NN interest)) (ADVP (RB periodically))))) (. .))\n",
+      "8%.The notes are zero-coupon securities and will not pay interest periodically.\n",
       "section:  10  filename:  wsj_1000\n"
      ]
     }
@@ -391,7 +414,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docs_parse['wsj_1001']['sentences'][3]['parsetree'] = \"(S (NP (NP (DT The) (NN size)) (PP (IN of) (NP (DT the) (NN offering)))) (VP (VBD was) (VP (VBN increased) (PP (IN from) (NP (NP (DT the) (ADJP (RB originally) (VBN planned)) (QP ($ $) (CD 250) (CD million))) (PRN (-LRB- -LRB-) (NP (NN redemption) (NN amount)) (-RRB- -RRB-)))))) (. .)) (S (NP (DT The) (NNS notes)) (VP (VBP are) (ADJP (JJ convertible) (PP (IN into) (NP (NP (JJ common) (NN stock)) (PP (IN of) (NP (NNP Blockbuster) (NNP Entertainment))))) (PP (IN at) (NP (NP (NP ($ $) (CD 22.26)) (NP (DT a) (NN share))) (, ,) (VP (VBG representing) (NP (NP (DT a) (ADJP (CD 12) (NN %)) (NN conversion) (NN premium)) (PP (IN over) (NP (NP (NN yesterday) (POS 's)) (NN closing) (NN price))))))))) (. .))\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,62 +450,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Relation', 'Section', 'FileNumber', 'Connective_SpanList',\n",
-       "       'Connective_GornList', 'Connective_Trees', 'Connective_RawText',\n",
-       "       'Connective_StringPosition', 'SentenceNumber', 'ConnHead', 'Conn1',\n",
-       "       'Conn2', 'ConnHeadSemClass1', 'ConnHeadSemClass2', 'Conn2SemClass1',\n",
-       "       'Conn2SemClass2', 'Attribution_Source', 'Attribution_Type',\n",
-       "       'Attribution_Polarity', 'Attribution_Determinacy',\n",
-       "       'Attribution_SpanList', 'Attribution_GornList', 'Attribution_Trees',\n",
-       "       'Attribution_RawText', 'Arg1_SpanList', 'Arg1_GornList', 'Arg1_Trees',\n",
-       "       'Arg1_RawText', 'Arg1_Attribution_Source', 'Arg1_Attribution_Type',\n",
-       "       'Arg1_Attribution_Polarity', 'Arg1_Attribution_Determinacy',\n",
-       "       'Arg1_Attribution_SpanList', 'Arg1_Attribution_GornList',\n",
-       "       'Arg1_Attribution_Trees', 'Arg1_Attribution_RawText', 'Arg2_SpanList',\n",
-       "       'Arg2_GornList', 'Arg2_Trees', 'Arg2_RawText',\n",
-       "       'Arg2_Attribution_Source', 'Arg2_Attribution_Type',\n",
-       "       'Arg2_Attribution_Polarity', 'Arg2_Attribution_Determinacy',\n",
-       "       'Arg2_Attribution_SpanList', 'Arg2_Attribution_GornList',\n",
-       "       'Arg2_Attribution_Trees', 'Arg2_Attribution_RawText', 'Sup1_SpanList',\n",
-       "       'Sup1_GornList', 'Sup1_Trees', 'Sup1_RawText', 'Sup2_SpanList',\n",
-       "       'Sup2_GornList', 'Sup2_Trees', 'Sup2_RawText', 'FullRawText'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "pdtb2.keys()"
+    "rawtext has error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "40600"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(S (NP (NP (DT The) (NN size)) (PP (IN of) (NP (DT the) (NN offering)))) (VP (VBD was) (VP (VBN increased) (PP (IN from) (NP (NP (DT the) (ADJP (RB originally) (VBN planned)) (QP ($ $) (CD 250) (CD million))) (PRN (-LRB- -LRB-) (NP (NN redemption) (NN amount)) (-RRB- -RRB-)))))) (. .))\n",
+      "(S (NP (DT The) (NNS notes)) (VP (VBP are) (ADJP (JJ convertible) (PP (IN into) (NP (NP (JJ common) (NN stock)) (PP (IN of) (NP (NNP Blockbuster) (NNP Entertainment))))) (PP (IN at) (NP (NP (NP ($ $) (CD 22.26)) (NP (DT a) (NN share))) (, ,) (VP (VBG representing) (NP (NP (DT a) (ADJP (CD 12) (NN %)) (NN conversion) (NN premium)) (PP (IN over) (NP (NP (NN yesterday) (POS 's)) (NN closing) (NN price))))))))) (. .))\n"
+     ]
     }
    ],
    "source": [
-    "len(pdtb2)"
+    "sent = \"The size of the offering was increased from the originally planned $ 250 million ( redemption amount ) . The notes are convertible into common stock of Blockbuster Entertainment at $ 22.26 a share , representing a 12 % conversion premium over yesterday 's closing price .\"\n",
+    "doc = tokenizor(sent)\n",
+    "for sent in doc.sents:\n",
+    "    print(constituent_parsing(sent))"
    ]
   },
   {
