--- a/charspanCheck.ipynb
+++ b/charspanCheck.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "from collections import Counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,12 +35,12 @@
     }
    ],
    "source": [
-    "pdtb2 = pd.read_csv(\"pdtb2_v2_modified.csv\")"
+    "pdtb2 = pd.read_csv(\"../pdtb2/pdtb2.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,116 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True 0\n",
-      "True 1\n",
-      "True 2\n",
-      "True 3\n",
-      "True 4\n",
-      "True 5\n",
-      "True 6\n",
-      "True 7\n",
-      "True 8\n",
-      "True 9\n",
-      "False 10\n",
-      "True 11\n",
-      "True 12\n",
-      "True 13\n",
-      "True 14\n",
-      "True 15\n",
-      "False 16\n",
-      "True 17\n",
-      "True 18\n",
-      "True 19\n",
-      "True 20\n",
-      "False 21\n",
-      "True 22\n",
-      "True 23\n",
-      "False 24\n",
-      "True 25\n",
-      "True 26\n",
-      "False 27\n",
-      "True 28\n",
-      "True 29\n",
-      "True 30\n",
-      "True 31\n",
-      "True 32\n",
-      "True 33\n",
-      "True 34\n",
-      "True 35\n",
-      "False 36\n",
-      "True 37\n",
-      "True 38\n",
-      "True 39\n",
-      "True 40\n",
-      "True 41\n",
-      "True 42\n",
-      "True 43\n",
-      "True 44\n",
-      "True 45\n",
-      "True 46\n",
-      "True 47\n",
-      "True 48\n",
-      "True 49\n",
-      "True 50\n",
-      "True 51\n",
-      "True 52\n",
-      "False 53\n",
-      "True 54\n",
-      "True 55\n",
-      "False 56\n",
-      "True 57\n",
-      "True 58\n",
-      "True 59\n",
-      "True 60\n",
-      "True 61\n",
-      "True 62\n",
-      "True 63\n",
-      "True 64\n",
-      "True 65\n",
-      "True 66\n",
-      "True 67\n",
-      "True 68\n",
-      "True 69\n",
-      "True 70\n",
-      "True 71\n",
-      "True 72\n",
-      "True 73\n",
-      "True 74\n",
-      "True 75\n",
-      "True 76\n",
-      "True 77\n",
-      "True 78\n",
-      "True 79\n",
-      "True 80\n",
-      "True 81\n",
-      "True 82\n",
-      "True 83\n",
-      "False 84\n",
-      "True 85\n",
-      "True 86\n",
-      "True 87\n",
-      "True 88\n",
-      "True 89\n",
-      "True 90\n",
-      "True 91\n",
-      "True 92\n",
-      "True 93\n",
-      "False 94\n",
-      "True 95\n",
-      "True 96\n",
-      "True 97\n",
-      "True 98\n",
-      "True 99\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(100):\n",
     "    arg1_char_span_string = pdtb2.loc[i, 'Arg1_SpanList']\n",
@@ -181,34 +75,156 @@
     "    filename = 'wsj_{0:02}'.format(int(section)) + '{:02}'.format(filenumber)\n",
     "    with open(DATA_PATH/section/filename) as f:\n",
     "        doc_rawtext = f.read()\n",
-    "    first = arg1_char_span_list[0][0]\n",
-    "    second = arg1_char_span_list[0][1]\n",
-    "    print(doc_rawtext[int(first):int(second)] == arg1_rawtext or doc_rawtext[int(first)+1:int(second)+1] == arg1_rawtext, i)"
+    "#     print(doc_rawtext[int(first):int(second)] == arg1_rawtext or doc_rawtext[int(first)+1:int(second)+1] == arg1_rawtext, i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "in terms of segment number:\n",
+    "single, double, trible = (38584, 1948, 51)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_length(char_span_list):\n",
+    "    char_span = 0\n",
+    "    for span in char_span_list:\n",
+    "        char_span += int(span[1]) - int(span[0])\n",
+    "    return char_span"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = []\n",
+    "for i in range(40600):\n",
+    "    arg1_char_span_string = pdtb2.loc[i, 'Arg1_SpanList']\n",
+    "    arg1_char_span_list = _get_span_list(arg1_char_span_string)\n",
+    "    arg1_rawtext = pdtb2.loc[i, 'Arg1_RawText']\n",
+    "\n",
+    "    first = arg1_char_span_list[0][0]\n",
+    "    second = arg1_char_span_list[0][1]\n",
+    "    if ';' not in arg1_char_span_string:\n",
+    "        char_span = check_length(arg1_char_span_list)\n",
+    "        a.append(abs(len(arg1_rawtext) - char_span))\n",
+    "    if ';' in arg1_char_span_string:\n",
+    "        char_span = check_length(arg1_char_span_list)\n",
+    "        a.append(len(arg1_rawtext) - char_span)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How many distances away:\n",
+    "    Counter({0: 37713,\n",
+    "         1: 2598,\n",
+    "         2: 193,\n",
+    "         6: 7,\n",
+    "         12: 1,\n",
+    "         9: 3,\n",
+    "         3: 50,\n",
+    "         5: 5,\n",
+    "         18: 2,\n",
+    "         4: 18,\n",
+    "         13: 1,\n",
+    "         8: 4,\n",
+    "         15: 1,\n",
+    "         62: 1,\n",
+    "         19: 1,\n",
+    "         10: 1,\n",
+    "         16: 1})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The average seven-day simple yield of the 400 funds was 8.12%, down from 8.14%.\n",
-      "The 30-day simple yield fell to an average 8.19% from 8.22%\n",
-      "The average seven-day simple yield of the 400 funds was 8.12%, down from 8.14%.The 30-day simple yield fell to an average 8.19% from 8.22%\n"
+      "With regard to Greece's long-bubbling bank-looting scandal, Mr. Papandreou's principal accuser remains George Koskotas, former owner of the Bank of Crete and self-confessed embezzler, now residing in a jail cell in Salem, Mass., from where he is fighting extradition proceedings that would return him to Greece.Mr. Koskotas's credibility is, at best, problematic.He has ample motive to shift the blame, and his testimony has also been found less than forthright on numerous points.Nevertheless, the New Democracy and Communist parties herald his assertions as proof of PASOK complicity. Among unanswered questions are whether Mr. Papandreou received $23 million of stolen Bank of Crete funds and an additional $734,000 in bribes, as contended; whether the prime minister ordered state agencies to deposit some $57 million in Mr. Koskotas's bank and then skim off the interest; and, what PASOK's cut was from the $210 million Mr. Koskotas pinched. Two former ministers were so heavily implicated in the Koskotas affair that PASOK members of Parliament voted to refer them to the special court.But eluding parliamentary probe was the case of millions of drachmas Mr. Koskotas funneled into New Democracy coffers.In the end, the investigation produced only circumstantial evidence and \"indications\" that point to PASOK, not clinching proof. On another issue, Greeks were told how their national intelligence agency, the EYP, regularly monitored the telephone conversations of prominent figures, including key opposition politicians, journalists and PASOK cabinet members.Despite convincing arguments, it was never established that Mr. Papandreou personally ordered or directed the wiretaps. The central weakness of the \"scandals\" debates was pointed up especially well when discussions focused on arms deals and kickbacks.The coalition government tried to show that PASOK ministers had received hefty sums for OKing the purchase of F-16 Fighting Falcon and Mirage 2000 combat aircraft, produced by the U.S.based General Dynamics Corp. and France's Avions Marcel Dassault, respectively.Naturally, neither General Dynamics nor Dassault could be expected to hamper its prospective future dealings by making disclosures of sums paid (or not) to various Greek officials for services rendered\n",
+      "2299\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "a = []\n",
+    "for i in range(40600):\n",
+    "    arg1_char_span_string = pdtb2.loc[i, 'Arg1_SpanList']\n",
+    "    arg1_char_span_list = _get_span_list(arg1_char_span_string)\n",
+    "    arg1_rawtext = pdtb2.loc[i, 'Arg1_RawText']\n",
+    "\n",
+    "    \n",
+    "    char_span = check_length(arg1_char_span_list)\n",
+    "    if abs(len(arg1_rawtext) - char_span) > 2:\n",
+    "        a.append(len(arg1_rawtext))\n",
+    "    if len(arg1_rawtext) == 2283:\n",
+    "        print(arg1_rawtext)\n",
+    "        print(char_span)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counter = Counter(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 8, 9, 10, 12, 13, 15, 16, 18, 19, 62]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(counter.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write functions"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def correct_by_shift(char_span_list, rawtext, arg_rawtext, number):\n",
+    "    \"\"\"\n",
+    "    Args:\n",
+    "        char_span_list: shift by number\"\"\"\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
